stark working button

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -675,7 +675,10 @@
                     </svg>
                 </button>
             </div>
-            
+            <div class="flex items-center justify-center mt-5 mb-3 gap-2 flex-row ">
+              <div>
+                <button type="button" class=" px-2 py-1 border-2 border-green-500 text-green-500 font-medium text-xs leading-tight uppercase rounded-md  hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out">Start working</button>
+              </div>
        <!-- <div class="w-full p-3 mt-8 bg-white rounded flex">
                 <div tabindex="0" aria-label="heart icon" role="img" class="focus:outline-none w-8 h-8 border rounded-full border-gray-200 flex items-center justify-center">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
