--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -663,7 +663,7 @@
     </div>
   </div>
 
-  <div class="w-full h-full z-40 leading-10 bg-gray-800 bg-opacity-90 top-0 overflow-y-auto overflow-x-hidden fixed sticky-0" id="chec-div">
+  <div class="w-full h-full z-40  bg-gray-800 bg-opacity-90 top-0 overflow-y-auto overflow-x-hidden fixed sticky-0" id="chec-div">
     <div class="w-full absolute z-10 right-0 h-full overflow-x-hidden transform translate-x-0 transition ease-in-out duration-700" id="notification">
         <div id="notificationHolder" class="2xl:w-4/12 bg-gray-50 h-screen overflow-y-auto p-8 absolute right-0">
             <div class="flex items-center justify-between">
@@ -675,8 +675,9 @@
                     </svg>
                 </button>
             </div>
-              <!-- <div>
-                <button type="button" class=" px-2 py-1 border-2 border-green-500 text-green-500 font-medium text-xs leading-tight uppercase rounded-md  hover:text-white hover:bg-green-500  focus:outline-none focus:ring-0 transition duration-150 ease-in-out">Start working</button>
+            <!-- <div class="flex items-center justify-center mt-5 mb-3 gap-2 flex-row ">
+              <div>
+                <button type="button" class=" px-2 py-1 border-2 border-green-500 text-black font-medium text-xs leading-tight uppercase rounded-md  hover:text-white hover:bg-green-500  focus:outline-none focus:ring-0 transition duration-150 ease-in-out">Start working</button>
               </div> -->
        <!-- <div class="w-full p-3 mt-8 bg-white rounded flex">
                 <div tabindex="0" aria-label="heart icon" role="img" class="focus:outline-none w-8 h-8 border rounded-full border-gray-200 flex items-center justify-center">
@@ -809,7 +810,8 @@
               <p tabindex="0" class="focus:outline-none text-sm flex flex-shrink-0 leading-normal px-3 py-16 text-gray-500">Thats it for now :)</p>
               <hr class="w-full">
             </div> -->
-    </>
+        </div>
+    </div>
 </div>
 <script>let notification = document.getElementById("notification");
 let checdiv = document.getElementById("chec-div");
