--- a/html/home.html
+++ b/html/home.html
@@ -9,11 +9,11 @@
     <link href="/css/output.css" rel="stylesheet">
     <title>Welcome to Yume</title>
 </head>
-<body class=" dark:bg-gray-600">
+<body class=" " style="background-color: #121212;">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.6.3/umd/react.production.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.6.3/umd/react-dom.production.min.js"></script>
-<nav class="bg-white dark:bg-transparent dark:shadow-lg  mt-3">
+<nav class="bg-transparent shadow-lg pt-3 dark:bg-black">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="relative flex items-center justify-between h-16">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -34,7 +34,7 @@
       </div>
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex-shrink-0">
-          <a href="/"> <p class="block lg:block h-8 w-auto font-poppins font-bold mr-10 text-4xl text-cyan-400">YUME.</p></a>
+          <a href="/"> <p class="block lg:block h-8 w-auto font-poppins font-bold mr-10 text-4xl dark:text-cyan-400">YUME.</p></a>
       
         </div>
         <div class="hidden sm:block sm:ml-6">
@@ -129,7 +129,7 @@
     })
   })</script>
 </nav>
-    <div class="bg-white dark:bg-transparent w-screen">
+    <div class="bg-transparent w-screen">
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
           <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"> Recently published:</h2>
       
