--- a/html/creator.html
+++ b/html/creator.html
@@ -188,7 +188,7 @@
                                 >
                                   <img
                                     class="object-cover w-full h-full rounded-sm"
-                                    src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&ixid=eyJhcHBfaWQiOjE3Nzg0fQ"
+                                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fdroidjournal.com%2Fwp-content%2Fuploads%2F2020%2F08%2FSolo-leveling-webtoon.jpg&f=1&nofb=1"
                                     alt=""
                                     loading="lazy"
                                   />
@@ -198,9 +198,9 @@
                                   ></div>
                                 </div>
                                 <div>
-                                  <p class="font-semibold">Hans Burger</p>
+                                  <p class="font-semibold">Solo leveling</p>
                                   <p class="text-xs text-gray-600 dark:text-gray-400">
-                                    10x Developer
+                                    Comedy, Fantasy
                                   </p>
                                 </div>
                               </div>
@@ -217,45 +217,44 @@
                               </button>
                             </td>
                           </tr>
-
-                        <tr class="text-gray-700 dark:text-gray-400">
-                          <td class="px-4 py-3">
-                            <div class="flex items-center text-sm">
-                              <!-- Avatar with inset shadow -->
-                              <div
-                                class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
-                              >
-                                <img
-                                  class="object-cover w-full h-full rounded-sm"
-                                  src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&ixid=eyJhcHBfaWQiOjE3Nzg0fQ"
-                                  alt=""
-                                  loading="lazy"
-                                />
+                          <tr class="text-gray-700 dark:text-gray-400">
+                            <td class="px-4 py-3">
+                              <div class="flex items-center text-sm">
+                                <!-- Avatar with inset shadow -->
                                 <div
-                                  class="absolute inset-0 rounded-full shadow-inner"
-                                  aria-hidden="true"
-                                ></div>
+                                  class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
+                                >
+                                  <img
+                                    class="object-cover w-full h-full rounded-sm"
+                                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fdroidjournal.com%2Fwp-content%2Fuploads%2F2020%2F08%2FSolo-leveling-webtoon.jpg&f=1&nofb=1"
+                                    alt=""
+                                    loading="lazy"
+                                  />
+                                  <div
+                                    class="absolute inset-0 rounded-full shadow-inner"
+                                    aria-hidden="true"
+                                  ></div>
+                                </div>
+                                <div>
+                                  <p class="font-semibold">Solo leveling</p>
+                                  <p class="text-xs text-gray-600 dark:text-gray-400">
+                                    Comedy, Fantasy
+                                  </p>
+                                </div>
                               </div>
-                              <div>
-                                <p class="font-semibold">Hans Burger</p>
-                                <p class="text-xs text-gray-600 dark:text-gray-400">
-                                  10x Developer
-                                </p>
-                              </div>
-                            </div>
-                          </td>
-                          <td class="px-4 py-3 text-sm">
-                            30
-                          </td>
-                          <td class="px-4 py-3 text-sm">
-                            3000
-                          </td>
-                          <td class="px-4 py-3 text-sm">
-                            <button id="followButton" onclick="followSeries()" class="bg-transparent text-sm hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded-full">
-                              Follow Series
-                            </button>
-                          </td>
-                        </tr>
+                            </td>
+                            <td class="px-4 py-3 text-sm">
+                              30
+                            </td>
+                            <td class="px-4 py-3 text-sm">
+                              3000
+                            </td>
+                            <td class="px-4 py-3 text-sm">
+                              <button id="followButton" onclick="followSeries()" class="bg-transparent text-sm hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-500 hover:border-transparent rounded-full">
+                                Follow Series
+                              </button>
+                            </td>
+                          </tr>
 
                           </div>
 
