--- a/html/creator.html
+++ b/html/creator.html
@@ -140,24 +140,57 @@
                 </div>
                 <div class="mx-auto">
                   <div class="w-full m-3 mx-auto xl:mx-0">
-                      <div class="rounded relative mt-8 h-48">
-                        <!-- cover image -->
-                          <img id="banner" src="" alt="" class="w-full h-full object-cover rounded absolute shadow" />   
-                          <div class="absolute  opacity-50 top-0 right-0 bottom-0 left-0 rounded"></div>
-                          <div class="flex items-center px-3 py-2 rounded absolute right-0 mr-4 mt-4 cursor-pointer">
-                            <label for="bannerImage" class="relative cursor-pointer flex">
-                            </label>
+                    <div
+                    class="card w-full  bg-gray-100 text-gray-50   transition-shadow shadow-xl hover:shadow-xl ">
+                    <div class="w-full card__media"><img src="https://image.freepik.com/free-vector/abstract-binary-code-techno-background_1048-12836.jpg" class="h-48 w-full object-cover"></div>
+                      <div class="flex items-center p-4">
+                        <div class="relative flex flex-col items-center w-full">
+                          <div
+                            class="h-24 w-24 md rounded-full relative avatar  items-end justify-end text-purple-400 min-w-max  -top-16 flex bg-purple-200  row-start-1 row-end-3 text-purple-650 ring-1 ring-white">
+                            <img class="h-24 w-24 md rounded-full relative" src="https://avatars3.githubusercontent.com/u/11801238?v=4" alt="">
+                            <div class="absolute"></div>
                           </div>
-
-                          <div class="w-20 h-20 rounded-full bg-cover bg-center bg-no-repeat absolute bottom-0 -mb-10 ml-12 shadow flex items-center justify-center">
-                              <img id="pfp" alt="" class="absolute z-0 h-full w-full object-cover rounded-full shadow top-0 left-0 bottom-0 right-0" />
-                              <div class="absolute   top-0 right-0 bottom-0 left-0 rounded-full z-0"></div>
-                              <div class="cursor-pointer flex flex-col justify-center items-center z-10 text-gray-100">
-                                <label for="pfpImage" class="relative cursor-pointer">
-                              </div>
+                          <div class="flex flex-col space-y-1 justify-center items-center -mt-12 w-full">
+                            <span class="text-md whitespace-nowrap text-black font-semibold">MaxTGM</span>
+                            <!-- <span class="text-md whitespace-nowrap text-cyan-500">Elite(this is a rank system will explain  later)</span> -->
+                            <p class="text-sm text-gray-700">
+                              I can't start my day without a coffee cup
+                            </p>
+                            <div class="py-2 flex space-x-2">
+                              <button id="" class="bg-transparent w-full hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded">
+                                Request
+                              </button>
+                              <button id="" class="bg-transparent w-full hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-600 hover:border-transparent rounded">
+                                Donate
+                              </button>
+                            </div>
+                          
+                            <div class="flex items-center justify-center space-x-3 pt-6">
+                              <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
+                                  <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                                  <span>Facebook</span>
+                              </button>
+                              <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
+                                <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                                <span>Facebook</span>
+                            </button>
+                            <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
+                              <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                              <span>Facebook</span>
+                          </button>
                           </div>
+                            <div
+                              class="py-4 flex justify-center items-center w-full divide-x divide-gray-400 divide-solid">
+                              <span class="text-center px-2"><span class="font-bold text-gray-900">56</span><span class="text-gray-800"> followers</span></span><span class="text-center px-2"><span class="font-bold text-gray-900">30</span><span class="text-gray-800"> Adaptations</span></span><span class="text-center px-2"><span class="font-bold text-gray-900">2000</span><span class="text-gray-800"> Likes</span></span>
+                            </div>
+                          </div>
+                        </div>
                       </div>
-                      <div class="m-5">    <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
+                      <!---->
+                    </div>
+                  </div>
+                      <div class="">   
+                        <div class="max-w-2xl mx-auto py-16 px-4 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
                         <h4
                         class="mb-4 text-lg font-semibold text-black dark:text-gray-300"
                       >
