--- a/html/creator.html
+++ b/html/creator.html
@@ -141,7 +141,7 @@
                 <div class="mx-auto">
                   <div class="w-full m-3 mx-auto xl:mx-0">
                     <div
-                    class="card w-full  bg-gray-100 text-gray-50   transition-shadow shadow-xl hover:shadow-xl ">
+                    class="card w-full  bg-gray-100 text-gray-50   transition-shadow shadow-xl shadow-blue-500 ">
                     <div class="w-full card__media"><img src="https://image.freepik.com/free-vector/abstract-binary-code-techno-background_1048-12836.jpg" class="h-48 w-full object-cover"></div>
                       <div class="flex items-center p-4">
                         <div class="relative flex flex-col items-center w-full">
@@ -168,15 +168,15 @@
                             <div class="flex items-center justify-center space-x-3 pt-6">
                               <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
                                   <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-                                  <span>Facebook</span>
+                                  <span>Instagram</span>
                               </button>
                               <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
                                 <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-                                <span>Facebook</span>
+                                <span>YouTube</span>
                             </button>
                             <button class="bg-blue-500 px-2 text-sm py-1 font-semibold text-white inline-flex items-center space-x-2 rounded">
                               <svg class="w-5 h-5 fill-current" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-                              <span>Facebook</span>
+                              <span>Discord</span>
                           </button>
                           </div>
                             <div
