--- a/html/creator.html
+++ b/html/creator.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link href="/css/output.css" rel="stylesheet">
-    <title>Welcome to Yume</title>
+    <title id="title"></title>
 </head>
 <body class="bg-gray-100">
     <!-- component -->
@@ -37,7 +37,7 @@
           </div>
           <div class="hidden sm:block sm:ml-6">
             <div class="flex">
-              <a href="#" class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
+              <a href="/" class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
               <a href="/dashboard/home" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 dark:text-white text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Dashboard</a>
               <a href="/library" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Library</a>
               <a href="#" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Calendar</a>
@@ -65,11 +65,11 @@
   
           <!-- Profile dropdown -->
           <div class="ml-3 relative">
-            <div>
+            <!-- <div>
               <button id="toggleprofile" class="flex text-sm border-2 object-cover border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out" id="user-menu" aria-label="User menu" aria-haspopup="true">
                 <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
               </button>
-            </div>
+            </div> -->
             <!--
               Profile dropdown panel, show/hide based on dropdown state.
   
@@ -135,7 +135,7 @@
             <div class="container mx-auto  dark:bg-gray-800 rounded">
                 <div class="xl:w-full border-b border-gray-300 dark:border-gray-700 py-5 dark:bg-gray-800">
                     <div class="flex w-11/12 mx-auto xl:w-full xl:mx-0 items-center ">
-                        <h1 tabindex="0" role="heading" aria-label="profile information" class="focus:outline-none text-3xl font-bold text-gray-800 ">MaxTGM</h1> 
+                        <h1 tabindex="0" role="heading" aria-label="profile information" class="focus:outline-none text-3xl font-bold text-gray-800" id="username"></h1> 
                     </div>
                 </div>
                 <div class="mx-auto">
@@ -172,17 +172,14 @@
                               >
                                 <th class="px-4 py-3">Series</th>
                                 <th class="px-4 py-3">No. of Chapters</th>
-                                <th class="px-4 py-3">Readers</th>
-                                <th class="px-4 py-3">Date</th>
+                                <th class="px-4 py-3">Follows</th>
+                                <th class="px-4 py-3">Last updated</th>
                               </tr>
                             </thead>
-                        <tbody
-                          class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"
-                        >
-                          <tr class="text-gray-700 dark:text-gray-400">
+                        <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800" id="seriesContainer">
+                          <!-- <tr class="text-gray-700 dark:text-gray-400">
                             <td class="px-4 py-3">
                               <div class="flex items-center text-sm">
-                                <!-- Avatar with inset shadow -->
                                 <div
                                   class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
                                 >
@@ -216,11 +213,10 @@
                                 Follow Series
                               </button>
                             </td>
-                          </tr>
-                          <tr class="text-gray-700 dark:text-gray-400">
+                          </tr> -->
+                          <!-- <tr class="text-gray-700 dark:text-gray-400">
                             <td class="px-4 py-3">
                               <div class="flex items-center text-sm">
-                                <!-- Avatar with inset shadow -->
                                 <div
                                   class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
                                 >
@@ -254,7 +250,7 @@
                                 Follow Series
                               </button>
                             </td>
-                          </tr>
+                          </tr> -->
 
                           </div>
 
@@ -281,7 +277,7 @@
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
       <script src="/js/init.js" type="module"></script>
-      <script defer src="/js/home.js" type="module"></script>
+      <script defer src="/js/creator.js" type="module"></script>
 </body>
 
 </html>
