--- a/html/creator.html
+++ b/html/creator.html
@@ -147,7 +147,7 @@
                         <div class="relative flex flex-col items-center w-full">
                           <div
                             class="h-24 w-24 md rounded-full relative avatar  items-end justify-end text-purple-400 min-w-max  -top-16 flex bg-purple-200  row-start-1 row-end-3 text-purple-650 ring-1 ring-white">
-                            <img class="absolute z-0 h-full w-full object-cover rounded-full shadow top-0 left-0 bottom-0 right-0" id="pfp" alt="">
+                            <img class="absolute z-0 h-full w-full object-cover rounded-full shadow top-0 left-0 bottom-0 right-0" id="userPfp" alt="">
                             <div class="absolute"></div>
                           </div>
                           <div class="flex flex-col space-y-1 justify-center items-center -mt-12 w-full">
@@ -308,8 +308,20 @@
      <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+      <script defer src="/js/vibrant.min.js"></script>
       <script src="/js/init.js" type="module"></script>
       <script defer src="/js/creator.js" type="module"></script>
+      <script defer>
+
+        let img = document.getElementById('userPfp');
+
+        img.addEventListener('load', function() {
+          Vibrant.from('https://zduoakccvlarenfacitl.supabase.co/storage/v1/object/public/users/7a2750e7-0d25-4a40-9236-ce7a42d61bd2/profile/pfp.jpg').getPalette().then(function(palette) {
+              console.log(palette.Vibrant.getHex());
+          });
+        })
+        
+      </script>
 </body>
 
 </html>
