--- a/html/creator.html
+++ b/html/creator.html
@@ -161,7 +161,7 @@
           </div>
           <div class="mx-auto">
             <div class="w-full m-3 mx-auto xl:mx-0">
-              <div class="card w-full  bg-white text-gray-50   transition-shadow shadow-md shadow-blue-400 ">
+              <div id="bigBox" class="card w-full  bg-white text-gray-50   transition-shadow shadow-md">
                 <div class="w-full card__media"><img id="banner" class="h-48 w-full object-cover"></div>
                 <div class="flex items-center p-4">
                   <div class="relative flex flex-col items-center w-full">
@@ -169,7 +169,7 @@
                       class="h-24 w-24 md rounded-full relative avatar  items-end justify-end text-purple-400 min-w-max  -top-16 flex bg-purple-200  row-start-1 row-end-3 text-purple-650 ring-1 ring-white">
                       <img
                         class="absolute z-0 h-full w-full object-cover rounded-full shadow top-0 left-0 bottom-0 right-0"
-                        id="pfp" alt="">
+                        id="userPfp" alt="">
                       <div class="absolute"></div>
                     </div>
                     <div class="flex flex-col space-y-5 justify-center items-center -mt-12 w-full">
@@ -459,13 +459,11 @@
       <script defer src="/js/creator.js" type="module"></script>
       <script defer>
 
-        let img = document.getElementById('userPfp');
-
-        img.addEventListener('load', function() {
-          Vibrant.from('https://zduoakccvlarenfacitl.supabase.co/storage/v1/object/public/users/7a2750e7-0d25-4a40-9236-ce7a42d61bd2/profile/pfp.jpg').getPalette().then(function(palette) {
-              console.log(palette.Vibrant.getHex());
+        function getProminentColour(link) {
+          return Vibrant.from(link).getPalette().then(function(palette) {
+              return palette.Vibrant.getHex()
           });
-        })
+        }
         
       </script>
 </body>
