--- a/html/creator.html
+++ b/html/creator.html
@@ -337,7 +337,7 @@
                               <tr
                                 class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
                                 <th class="px-4 py-3">Series</th>
-                                <th class="px-4 py-3">No. of Chapters</th>
+                                <th class="px-4 py-3">Likes</th>
                                 <th class="px-4 py-3">Follows</th>
                                 <th class="px-4 py-3">Actions</th>
                               </tr>
