--- a/html/creator.html
+++ b/html/creator.html
@@ -419,13 +419,13 @@
                                 </tr> -->
                             </tbody>
                             </table>
-                            <h4 class="mt-7 text-lg font-semibold text-black dark:text-gray-300">
+                            <h4 id="workedWith" class="mt-7 text-lg font-semibold text-black dark:text-gray-300">
                              Worked With:
                             </h4>
                             <div class="w-full mb-8 overflow-hidden rounded-lg shadow-xs">
                               <div class="w-full overflow-x-auto">
-                                <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
-                                  <div class="group relative">
+                                <div id="workedWithContainer" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
+                                  <!-- <div class="group relative">
                                     <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
                                       <img class="aspect-square object-cover" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" class=" object-center object-cover">
                                     </div>
@@ -439,7 +439,7 @@
                                         </h3>
                                     </div>
                                   </div>
-                                </div>
+                                </div> -->
                               </div>
                 </div>
               </div>
