--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -167,7 +167,7 @@
 				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
-				<button class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">View Profile</button>
+				<a id="viewProfile" class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">View Profile</a>
 			</div>
 		</div>
 		<!--/Author-->
