--- a/html/comic.html
+++ b/html/comic.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link href="/css/output.css" rel="stylesheet">
-    <title>Create a new Web Novel Series</title>
+    <title>Upload the next masterpiece</title>
 </head>
 <body>
  
@@ -142,12 +142,12 @@
                       </div>
                         <div class="sm:rounded-md sm:overflow-hidden">
                           <div class="px-4 py-5 bg-white space-y-6 sm:p-6 ">
-                              <p><span class=" text-gray-700 text-xl font-bold">Series:</span> <span class="text-gray-900 text-xl font-bold">Phy mcq was so boring so I created YUME</span> </p>
+                              <p><span class=" text-gray-700 text-xl font-bold">Series:</span> <span id="seriesTitle" class="text-gray-900 text-xl font-bold"></span> </p>
                             <div class="grid grid-cols-3 gap-6">
                               <div class="col-span-3 sm:col-span-2">
                                 <label for="title" class="block text-sm font-medium text-gray-700"> Chapter Title </label>
                                 <div class="mt-1 flex rounded shadow-sm">
-                                  <input required type="text" maxlength="50" name="title" id="title" class="focus:ring-cyan-500 focus:border-cyan-500 flex-1 block w-full rounded-none rounded-r-md sm:text-sm border-gray-300" placeholder="Upto 50 charaters">
+                                  <input required type="text" maxlength="50" name="title" id="title" class="focus:ring-cyan-500 focus:border-cyan-500 flex-1 block w-full rounded-none rounded-r-md sm:text-sm border-gray-300" placeholder="Chapter Title">
                                 </div>
                               </div>
                             </div>
@@ -156,10 +156,10 @@
                             <label class="block text-sm font-medium text-gray-700"> Upload files </label>
                             <div class="grid my-3 grid-flow-row grid-cols-2">
                                 <div class="flex gap-3 text-sm">
-                                    <button class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
+                                    <button type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Upload Files
                                       </button>
-                                      <button class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
+                                      <button type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Delete All
                                       </button>
                                 </div>
@@ -224,11 +224,8 @@
                             </div>
                           </div>
                           <div class="px-4 py-3 text-right sm:px-6">
-                            <input type="checkbox" id="mature" name="mature">
-                            <label for="mature">Contains Mature themes (18+)</label>
-                          </div>
-                          <div class="px-4 py-3 text-right sm:px-6">
-                            <button type="submit" id="btnCreate" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Save</button>
+                            <button type="button" id="btnSaveDraft" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Save Draft</button>
+                            <button type="button" id="btnPublish" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Publish</button>
                           </div>
                         </div>
                         
@@ -242,7 +239,7 @@
    
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script defer src="/js/novelform.js" type="module"></script>
+    <script defer src="/js/comic.js" type="module"></script>
     <script>  
       //show and hide dropdown list item on button click  
       function show_hide() {  
