--- a/html/comic.html
+++ b/html/comic.html
@@ -159,8 +159,8 @@
                                 <div class="flex gap-3 text-sm">
                                   <label for="files" class="relative cursor-pointer bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                     <span>Upload a file </span>
-                                    <input required onchange="previewPanels(event)" id="panels" name="files[]" type="file" accept=".jpg" multiple class="sr-only ">                              
-                                    </label>
+                                    <input required onchange="previewPanels(event)" id="files" name="files[]" type="file" multiple accept=".jpg" class="sr-only">
+                                  </label>
 
                                       <button onclick="deleteAll()" type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Delete All
