--- a/html/series.html
+++ b/html/series.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
 </head>
 
-<body class="">
+<body class="dark">
     <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen }">
         <!-- Desktop sidebar -->
         <aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0">
@@ -405,7 +405,7 @@
                     <h2 class="mt-4 text-2xl font-semibold text-gray-700 dark:text-gray-200">
                         Series
                     </h2>
-                    <p tabindex="0" class=" focus:outline-none text-sm font-light leading-tight text-gray-600 mt-4">To make a new series go to <a href="/dashboard/home" class="underline text-cyan-700">dashboard</a> </p> 
+                    <p tabindex="0" class="dark:text-gray-200 focus:outline-none text-sm font-light leading-tight text-gray-600 mt-4">To make a new series go to <a href="/dashboard/home" class="underline text-cyan-700 dark:text-cyan-300">dashboard</a> </p> 
 
                 </div>
                 <section>
