--- a/html/readComic.html
+++ b/html/readComic.html
@@ -16,7 +16,7 @@
   </head>
 
   
-<body class=" font-sans leading-normal tracking-normal" style="background-color: #121212; ">
+<body class=" font-sans leading-normal tracking-normal bg-black" >
 
 	<nav id="header" class="fixed w-full z-10 top-0">
 
@@ -66,10 +66,11 @@
 			</div>
 		</div>
 	</nav>
+	
 
 
 	<!--Container-->
-	<div class="container w-full md:max-w-3xl mx-auto pt-20">
+	<div class="container w-full md:max-w-3xl mx-auto pt-20 " >
 
 		<div class="w-full px-4 md:px-6 text-xl text-gray-800 leading-normal" style="font-family:Georgia,serif;">
 
