--- a/html/home.html
+++ b/html/home.html
@@ -49,7 +49,7 @@
       <div class="relative mx-auto text-gray-600 md:block hidden ">
 				   
 				<input
-					class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none"
+					class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none" id="seriesSearchBar"
 					type="search" name="search" placeholder="Search">
 				<button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
 					<svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
