--- a/html/popular.html
+++ b/html/popular.html
@@ -142,6 +142,17 @@
         <p class="rounded-md px-3 font-bold  bg-black text-white uppercase hover:underline cursor-pointer" dark:text-gray-100">Web Comics</p>
         <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
     </header>
+    <header class="flex  w-screen items-center text-center justify-center gap-7 border-t-0 border h-8 overflow-y-hidden">
+      <p class="text-sm underline text-cyan-900 uppercase font-bold cursor-pointer">Latest</p>
+      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
+      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
+      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
+      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
+      <p class="text-sm hover:underline text-gray-900 uppercase  cursor-pointer">Comedy</p>
+
+
+
+  </header>
     
     <main class="max-w-5xl mx-auto">
 
