--- a/html/search.html
+++ b/html/search.html
@@ -230,10 +230,12 @@
                               <div class="px-10 max-w-xl">
                                   <h2 class="text-2xl text-white font-semibold">Popular</h2>
                                   <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
+                                  <a href="/popular">
                                   <button class="flex items-center mt-4 px-3 py-2 bg-blue-600 text-white text-sm uppercase font-medium rounded hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
                                       <span>Check them out</span>
                                       <svg class="h-5 w-5 mx-2" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                                   </button>
+                                </a>
                               </div>
                           </div>
                       </div>
@@ -264,9 +266,54 @@
                           </div>
                       </div>
                       <div class="mt-16">
-                          <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">Recommended</h3>
-                          <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-6">
+                          <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">For You:</h3>
+                          <div id="" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
+                            <div class="group relative">
+                              <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
+                                <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
+                              </div>
+                              <div class="mt-4 flex justify-between">
+                                <div>
+                                  <h3 class="text-sm text-gray-700">
+                                    <a>
+                                      <span aria-hidden="true" class="absolute inset-0"></span>
+                                      Solo leveling
+                                    </a>
+                                  </h3>
+                              </div>
+                            </div>
                           </div>
+                          <div class="group relative">
+                            <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
+                              <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
+                            </div>
+                            <div class="mt-4 flex justify-between">
+                              <div>
+                                <h3 class="text-sm text-gray-700">
+                                  <a>
+                                    <span aria-hidden="true" class="absolute inset-0"></span>
+                                    Solo leveling
+                                  </a>
+                                </h3>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="group relative">
+                          <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
+                            <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
+                          </div>
+                          <div class="mt-4 flex justify-between">
+                            <div>
+                              <h3 class="text-sm text-gray-700">
+                                <a>
+                                  <span aria-hidden="true" class="absolute inset-0"></span>
+                                  Solo leveling
+                                </a>
+                              </h3>
+                          </div>
+                        </div>
+                      </div>
+                        </div>
                       </div>
                       <div class="mt-16">
                       </div>
