--- a/html/home.html
+++ b/html/home.html
@@ -167,3 +167,10 @@
       <script defer src="/js/home.js" type="module"></script>
 </body>
 </html>
+
+
+<div class="flex flex-row">
+  <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover"
+  <p>click to continue reading <b>ch. 123</b></p>
+</div>
+
