completed search filter

--- a/html/search.html
+++ b/html/search.html
@@ -133,9 +133,9 @@
   })</script>
 </nav>
 <header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
-  <p class="rounded-md px-3 font-bold  bg-black dark:bg-white text-white uppercase hover:underline cursor-pointer dark:text-black">ALL</p>
-  <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-  <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
+  <p id="filterAll" class="filterActive text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">ALL</p>
+  <p id="filterNovels" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
+  <p id="filterComics" class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Comics</p>
 </header>
 
 <!-- component -->
