--- a/html/search.html
+++ b/html/search.html
@@ -232,7 +232,7 @@
                           <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
                               <div class="px-10 max-w-xl">
                                   <h2 class="text-2xl text-white font-semibold">Popular</h2>
-                                  <p class="mt-2 text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore facere provident molestias ipsam sint voluptatum pariatur.</p>
+                                  <p class="mt-2 text-gray-400">Check out the most popular works</p>
                                   <a href="/popular">
                                   <button class="flex items-center mt-4 px-3 py-2 bg-blue-600 text-white text-sm uppercase font-medium rounded hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
                                       <span>Check them out</span>
